--- a/output.css
+++ b/output.css
@@ -1109,6 +1109,10 @@ input[type="range"]::-ms-fill-lower {
   max-width: 36rem;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
